<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_parking_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            tools:text="@string/textview_parking_name" />

        <TextView
            android:id="@+id/textview_available"
            android:layout_width="50dp"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:background="@drawable/rounded_textview_green"
            android:textColor="@android:color/white"
            tools:text="@string/textview_availability" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/textview_naam_title"
        android:textColor="@color/title_pink" />

    <TextView
        android:id="@+id/textview_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:text="@string/textview_parking_name" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/textview_adres_title"
        android:textColor="@color/title_pink" />

    <TextView
        android:id="@+id/textview_adres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:text="@string/textview_address" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/textview_contact_title"
        android:textColor="@color/title_pink" />

    <TextView
        android:id="@+id/textview_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:text="@string/textview_contact" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/textview_totale_cap_title"
        android:textColor="@color/title_pink" />

    <TextView
        android:id="@+id/textview_totale_cap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:text="@string/textview_totale_cap" />

</LinearLayout>